--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cloud_firestore: ^6.1.0
   firebase_storage: ^13.0.4
   provider: ^6.1.5+1
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
