--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   google_fonts: ^6.3.2
   image_picker: ^1.2.1
   http: ^1.6.0
+  url_launcher: ^6.1.10
+  easy_localization: ^3.0.7
 
 dev_dependencies:
   flutter_test:
@@ -40,7 +42,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/images/splash.jpg
+    - assets/translation/
   #  - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
