--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^1.6.0
   url_launcher: ^6.1.10
   easy_localization: ^3.0.7
+  connectivity_plus: ^6.0.5
 
 dev_dependencies:
   flutter_test:
